--- a/ServiceAccounts/pod-definition.yml
+++ b/ServiceAccounts/pod-definition.yml
@@ -6,4 +6,4 @@ spec:
   containers:
     - name: my-kubernetes-dashboard
       image: my-kubernetes-dashboard
-  serviceAccount: dashboard-sa
+  serviceAccountName: dashboard-sa
